--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
+5.0.16
+- Changed descriptions, icons, fanart... (by opensubtitles)
+
 5.0.15
-- Users are able to download subtitles as anonymous without authentication.
+- disable anonymous login, users need to register on opensubtitles.org and login in addon settings.
 
 5.0.14
 - Fix for Portuguese (Brazil) broken by 42f6ec9, thx host505
