--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+5.1.1
+- Fixed issue with language flag icons
+
 5.1.0
 - Ported to python 3.0. The 30th anniversary of the Restoration of Independence of Lithuania
 
