--- a/resources/language/resource.language.en_GB/strings.po
+++ b/resources/language/resource.language.en_GB/strings.po
@@ -29,5 +29,9 @@ msgid "Login Details"
 msgstr ""
 
 msgctxt "#32005"
-msgid "Your opensubtitles.org username or password is empty or not valid"
+msgid "Your opensubtitles.com username, password or API key is empty or not valid"
+msgstr ""
+
+msgctxt "#32006"
+msgid "API Key"
 msgstr ""
