--- a/resources/language/resource.language.en_GB/strings.po
+++ b/resources/language/resource.language.en_GB/strings.po
@@ -17,15 +17,15 @@ msgid "Error searching for subtitles"
 msgstr ""
 
 msgctxt "#32002"
-msgid "Your opensubtitles.com username, password is empty or not valid"
+msgid "Plugin is not properly configured, insert valid OpenSubtitles.com username and password."
 msgstr ""
 
 msgctxt "#32003"
-msgid "Unable to authenticate. Check your opensubtitles.com username, password."
+msgid "Unable to authenticate. Check your OpenSubtitles.com username, password."
 msgstr ""
 
 msgctxt "#32004"
-msgid "You have reached opensubtitles.com download limit. Get VIP or try again tomorrow."
+msgid "You have reached OpenSubtitles.com download limit. Get VIP or try again tomorrow."
 msgstr ""
 
 msgctxt "#32101"
